# mistral-ocr

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/mistral_ocr/: __main__.py  base.py  mistral.py
