[project]
name = "mistral-ocr"
version = "0.1.0"
description = "Extract text from PDFs and images using Mistral's OCR API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
keywords = ["ocr", "pdf", "image", "mistral", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "mistralai>=1.9.11",
    "pydantic>=2.12.3",
    "typer>=0.20.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.0.0"]


[project.urls]
Homepage = "https://github.com/aiamblichus/mistral-ocr"
Repository = "https://github.com/aiamblichus/mistral-ocr"
Issues = "https://github.com/aiamblichus/mistral-ocr/issues"

[project.scripts]
mistral-ocr = "mistral_ocr.__main__:app"

[tool.uv]
package = true
